[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainGame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Snake_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/apple.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/crunch.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Fonts/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Graphics/grass.png" type="Texture" id=6]

[sub_resource type="TileSet" id=1]
0/name = "Snake_spritesheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 80 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 2, 1 )
0/autotile/tile_size = Vector2( 40, 40 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "apple.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 40, 40 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 40, 40 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="MainGame" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 40, 40 )
format = 1

[node name="GameTick" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Crunch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="HiscoreLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
custom_fonts/font = SubResource( 2 )
text = "Hi-score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 23.0
margin_right = 67.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="GameTick" to="." method="_on_GameTick_timeout"]
